--- a/About.html
+++ b/About.html
@@ -21,7 +21,7 @@
 <p3 ="about">We try to the best of our ability to repair your computers or whatever problem you may have with it. </p>
 <p4 ="about">We are available during Wednesdays until July 28, 2021 from 10:45Am-2:20PM </p>
 <p5 ="about"> The only thing you will have to pay for would be parts or components that you would want to change on your computer and also operating systems you want to download on your computers. </p4>
-<img src="XYZ/parts.png" />
+<img src="parts.png" />
 </main>
 </body>
 </html>
