--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <main>
 <h1> WELCOME TO THE ICET WORKSHOP </h1>
 <p1 id="about"> We offer free repairs on personal Computers and Laptops. Book your appointment now! </p>
-<img src="XYZ/poster.png" />
+<img src="poster.png" />
 </main>
 </body>
 </html>
