--- a/Support.html
+++ b/Support.html
@@ -20,7 +20,7 @@
 <p6 ="about"> Contact Professor Will Wong if you have any problems or concerns with your computer </p>
 <p7 ="about"> Contact Professor Will Wong to book appointments </p> 
 <p8 ="about"> Email: wwong5@my.centennialcollege.ca </p>
-<img src="XYZ/email.png" />
+<img src="email.png" />
 </main>
 </body>
 </html>
