--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </ul>
 </nav>
 <main>
-<h1> WELCOME TO THE ICET WORKSHOP </h1>
+<h1> WELCOME TO THE ICT WORKSHOP </h1>
 <p1 id="about"> We offer free repairs on personal Computers and Laptops. Book your appointment now! </p>
 <img src="poster.png" />
 </main>
